cluster/manifests/whisper-worker/overlays/dev/minio/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  mtls:
    mode: STRICT
