cluster/manifests/whisper-worker/overlays/dev/minio/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: minio
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: minio
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./whisper-worker-redis-haproxy-writer.whisper-worker.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
